--- a/aicovermaker/src/index.css
+++ b/aicovermaker/src/index.css
@@ -1,3 +1,14 @@
+*{
+  color: white;
+
+}
+
+.cat{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +16,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #1b1b1b;
 }
 
 code {
@@ -50,9 +62,38 @@ h1:hover:after {
 	}
 }
 
+textarea{
+  height: 150px !important;
+}
+
 .Header{
   font-size: 50px;
 }
+
+.mid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+/* Make sure the wrapper takes the full height of the viewport */
+width: 50;
+}
+
+.copy {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-top: 28px;
+
+  &:hover {
+    background-color: #555;
+  }
+}
+
 
 .wrapper{
   display: flex;
@@ -60,13 +101,24 @@ h1:hover:after {
   flex-direction: column;
   margin-left: 10%;
   margin-right: 10%;
+  margin-top: 20px;
+}
+
+.submitbutton{
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .inputstuff{
   background-color: transparent;
   font-size: 18px;
-  max-height: 200px;
-  margin-bottom: 10px;
+  height: auto;
+}
+
+.output{
+  margin-top: 40px;
 }
 
 .label{
@@ -88,6 +140,19 @@ h1:hover:after {
   font-size: 14px;
 }
 
+.copy {
+  background-color: #333; /* Darker background color */
+  color: #fff; /* White text color */
+  padding: 10px 20px; /* Adjust padding as needed */
+  border: none; /* Remove default border */
+  border-radius: 5px; /* Add border radius for rounded corners */
+  cursor: pointer; /* Show pointer cursor on hover */
+  transition: background-color 0.3s ease; /* Add a smooth transition effect */
+
+  &:hover {
+    background-color: #555; /* Darker background color on hover */
+  }
+}
 
 
 .Header::before {
@@ -107,6 +172,7 @@ h1:hover:after {
   visibility: visible;
   transform: scaleX(1);
 }
+
 
 
 
